# Symphonize

./: Patient.7z  README.md
day 43-45 screening/screening/: pyproject.toml
day 43-45 screening/screening/src/screening/config/: agents.yaml
persimmon/persimmon-api-develop/backend/app/: README.md  pyproject.toml
persimmon/persimmon-api-develop/backend/app/alembic/versions/: 0f4e44666059_create_applicant_table.py  27cfe278e544_create_candidacy_table.py  28aeba98bd56_add_new_columns_like_about_tagline_and_.py  3039e05d1fa6_add_profile_image_column_in_recruiter_.py  3e407a21b9be_create_job_table.py  44addc4447f5_add_uuid_column_to_applicant_table.py  49c9ed10a6db_add_feedback_column.py  4dfee85007d2_add_enhanced_description_column_to_job_.py  641970544b47_create_integration_table.py  6b669337e283_create_customization_table.py  8f5e292d1d71_alter_the_column_types_of_min_and_max_.py  b98ba5b3b61a_add_gmail_to_recruiter.py  d67d941dad23_update_company_table.py  de7a178041f7_create_templates_table.py  e0e89645afed_alter_email_id_column_name_to_email_data_and_.py  e4cfb00faf87_change_job_experience_from_integer_to_.py  faaa80c82216_create_shared_table.py
persimmon/persimmon-api-develop/backend/app/app/: main.py
persimmon/persimmon-api-develop/backend/app/app/api/v1/: api.py
persimmon/persimmon-api-develop/backend/app/app/api/v1/endpoints/: ai.py  applicants.py  careerpage.py  company.py  email.py  integration.py  interview.py  jobs.py  linkedin.py  microsoftmeet.py  recruiter.py  resumes.py  share_applicants.py  stages.py  templates.py  watiintegration.py  whatchimpintegration.py  (+2 more)
persimmon/persimmon-api-develop/backend/app/app/datasets/: email_templates.json
persimmon/persimmon-api-develop/backend/app/app/db/: session.py
persimmon/persimmon-api-develop/backend/app/app/helpers/: ai_helper.py  company_helper.py  data_helper.py  date_helper.py  email_helper.py  firebase_helper.py  gcp_helper.py  image_helper.py  jd_helper.py  job_helper.py  json_helper.py  linkedin_helper.py  log_helper.py  match_score_helper.py  otlpless_helper.py  pdf_helper.py  share_applicants_helper.py  solr_helper.py  stages_helper.py  work_exp_helper.py  zoom_helper.py
persimmon/persimmon-api-develop/backend/app/app/models/: applicant.py  company.py  customization.py  integration.py  job.py  master_data.py  recruiter.py  shared.py  template.py
persimmon/persimmon-api-develop/backend/app/app/services/: applicants.py
persimmon/persimmon-api-develop/backend/app/app/utils/: validators.py
persimmon/persimmon-api-develop/backend/app/test/helpers/: test_api_keys.py  test_email.py  test_email2.py  test_email_helper.py  test_subscriber.py
(+679 files in other folders)
